# praatMaar

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  SECURITY.md  app_logging.py  config.py  destinations.py  destinations_dialog.py  dictation.py  final-fix-report.md  help_dialog.py  hotkeys.py  i18n.py  indicator.py  mac_input.py  mic_errors.py  modules_dialog.py  opnamesessie.py  praatMaar.spec  pyproject.toml  recovery.py  requirements-dev.txt  requirements.txt  settings.py  settings_process.py  splash.py  start-praatMaar.bat  start-praatMaar.vbs  start-whisper.bat  start-whisper.vbs  tray.py  ui_icon.py  version_info.txt  win_identity.py
.cursor/rules/: git-branches.mdc
.cursor/skills/: README.md
.cursor/skills/prepare-release/: SKILL.md  release-checklist.md
.cursor/skills/update-documentation/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.superpowers/sdd/: final-fix-report.md  task-5-report.md  task-7-report.md  task-8-report.md
docs/: HANDOFF-destination-pill.md  HANDOFF-mac-port.md  HANDOFF-meeting-buddy-teams-loopback.md  RFC-AudioCapture-01.md  RFC-MeetingBuddy-01.md  RFC-MeetingBuddy-02.md  RFC-MeetingBuddy-03.md  RFC-MeetingBuddy-04.md  STATUS.md  macos-permissions.md  modules-authoring.md  modules-integration.md  release-macos.md  release-windows.md  teams-loopback-acceptance.md
docs/adr/: 0001-platform-seam.md  0002-macos-native-overlay-indicator.md  0003-hybrid-module-system.md  0004-local-first-inference.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/archive/: HANDOFF-mac-port.md  HANDOFF-opname-indicator.md
docs/superpowers/plans/: 2026-07-18-destinations.md  2026-07-19-destination-auto-paste.md  2026-07-19-meeting-buddy-mvp.md  2026-07-19-recovery-ui.md  2026-07-22-incremental-final-from-partial.md  2026-07-22-meeting-buddy-tray-ux.md  2026-07-23-meeting-buddy-transcript-stream.md
docs/superpowers/specs/: 2026-07-18-destinations-design.md  2026-07-18-i18n-design.md  2026-07-18-warm-microphone-design.md  2026-07-19-capability-registry-design.md  2026-07-19-destination-auto-paste-design.md  2026-07-19-meeting-buddy-mvp-design.md  2026-07-19-module-capabilities-design.md  2026-07-19-modules-design.md  2026-07-19-recovery-ui-design.md  2026-07-19-speaker-detection-design.md  2026-07-22-incremental-final-from-partial-design.md  2026-07-22-meeting-buddy-transcript-stream-design.md  2026-07-22-meeting-buddy-tray-ux-design.md  2026-07-22-transcription-progress-design.md  2026-07-23-local-llm-module-design.md  2026-07-23-meeting-buddy-agenda-review-design.md
docs/user/: help.de.md  help.en.md  help.nl.md
host/: __init__.py  _mac.py  _win.py
indicator/: __init__.py  _contract.py  _mac.py  _win.py
installer/: praatMaar.iss
locales/: de.json  en.json  nl.json
modules/: __init__.py  _contract.py  bus.py  journal.py  registry.py  settings_store.py  whisper.py
modules/_builtin/: audio_capture.py  audio_capture_mix.py  inbox_mirror.py  speaker_detection.py  speech_to_text.py
modules/_builtin/local_llm/: __init__.py  config.py  module.py  ollama_client.py  provider.py
modules/_builtin/meeting_buddy/: __init__.py  agenda_dialog.py  agenda_review.py  agenda_store.py  binding.py  config.py  devices.py  heuristics.py  hint_coordinator.py  hint_text.py  hints.py  live_summary.py  module.py  observability.py  orchestrator.py  overlay.py  prep.py  prep_dialog.py  properties_dialog.py  session_controller.py  state.py  state_service.py  stop_routing.py  topic_ladder.py  transcript_journal.py  transcript_processor.py  ui_presenter.py
modules/capabilities/: __init__.py  continuous_capture.py  registry.py  semantic_analysis.py  speaker_detection.py  speech_to_text.py
modules/defaults/: meeting-buddy.yaml
modules/testing/: __init__.py  fake_capture.py  fake_stt.py
packaging/macos/: entitlements.plist
scripts/: build-windows.ps1
tests/: test_audio_capture_engine.py  test_audio_capture_mix.py  test_audio_capture_module_register.py  test_audio_capture_ringbuffer.py  test_capability_lifecycle.py  test_capability_registry.py  test_capture_stt_wiring.py  test_config.py  test_continuous_capture_contract.py  test_destinations.py  test_help_dialog.py  test_host_mac.py  test_host_win.py  test_hotkeys.py  test_hotkeys_tk.py  test_i18n.py  test_incremental_transcription.py  test_indicator_contract.py  test_indicator_position.py  test_local_llm.py  test_mac_input_tokens.py  test_meeting_buddy_agenda_dialog.py  test_meeting_buddy_agenda_review.py  test_meeting_buddy_agenda_store.py  test_meeting_buddy_config.py  test_meeting_buddy_heuristics.py  test_meeting_buddy_hint_text.py  test_meeting_buddy_hints.py  test_meeting_buddy_live_summary.py  test_meeting_buddy_observability.py  test_meeting_buddy_orchestrator.py  test_meeting_buddy_overlay.py  test_meeting_buddy_prep.py  test_meeting_buddy_properties_dialog.py  test_meeting_buddy_state.py  test_meeting_buddy_stop_and_agenda.py  test_meeting_buddy_topic_ladder.py  test_meeting_buddy_transcript_journal.py  test_meeting_buddy_ux.py  test_mic_errors.py  (+22 more)
