[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "praatMaar"
version = "0.1.0"
description = "Lokale Nederlandstalige dicteertool (Faster-Whisper, Windows)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Ben van Kruistum" }]
keywords = ["dictation", "whisper", "speech-to-text", "dutch", "windows"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "faster-whisper==1.2.1",
    "sounddevice==0.5.5",
    "pynput==1.8.2",
    "pystray==0.19.5",
    "Pillow==12.3.0",
    "pyautogui==0.9.54",
    "pyperclip==1.11.0",
    "numpy==2.5.1",
    "scipy==1.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
]
build = [
    "pyinstaller>=6.0",
]

[project.urls]
Homepage = "https://github.com/benvankruistum/praatMaar"
Issues = "https://github.com/benvankruistum/praatMaar/issues"

[tool.setuptools]
py-modules = [
    "dictation",
    "config",
    "hotkeys",
    "indicator",
    "recovery",
    "settings",
    "splash",
    "tray",
    "app_logging",
    "opnamesessie",
]
packages = ["host"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
