[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "praatMaar"
version = "0.2.0"
description = "Lokale dicteertool (Faster-Whisper; Windows + macOS; UI/spraak nl/en/de)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Ben van Kruistum" }]
keywords = ["dictation", "whisper", "speech-to-text", "dutch", "windows", "macos"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "faster-whisper==1.2.1",
    "sounddevice==0.5.5",
    "pynput==1.8.2",
    "pystray==0.19.5",
    "Pillow==12.3.0",
    "pyautogui==0.9.54",
    "pyperclip==1.11.0",
    "numpy==2.5.1",
    "scipy==1.18.0",
    "PyYAML==6.0.3",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "ruff==0.14.14",
]
build = [
    "pyinstaller>=6.0",
]

[project.urls]
Homepage = "https://github.com/benvankruistum/praatMaar"
Issues = "https://github.com/benvankruistum/praatMaar/issues"

[tool.setuptools]
py-modules = [
    "dictation",
    "config",
    "destinations",
    "destinations_dialog",
    "help_dialog",
    "hotkeys",
    "recovery",
    "settings",
    "settings_process",
    "splash",
    "tray",
    "app_logging",
    "opnamesessie",
    "win_identity",
    "i18n",
    "mac_input",
]
packages = [
    "host",
    "indicator",
    "modules",
    "modules._builtin",
    "modules._builtin.meeting_buddy",
    "modules.capabilities",
]

[tool.setuptools.package-data]
modules = ["defaults/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100
src = [".", "tests"]
exclude = [
    ".venv",
    "build",
    "dist",
    ".scratch",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear (duidelijke bugs)
    "UP",  # pyupgrade (licht)
]
ignore = [
    "E501",   # line length: format regelt stijl; lange NL-strings ok
    "B008",   # function calls in defaults (tkinter/callbacks)
    "UP007",  # Optional[X] vs X | None — bestaande annotations laten
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]  # assert False in tests ok

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
